--- a/index.html
+++ b/index.html
@@ -43,15 +43,77 @@
         <section class="container">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
+                    <!-- slider 1 -->
                   <div class="carousel-item active">
-                    <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                    <div class="row d-flex align-items-center p-5 bg-info">
+                          <div class="col-lg-7 ">
+                            <h1>
+                                Cool Dude Headphone
+                            </h1>
+                            <p>
+                                This is the best headphone in the world for people who just want to waste time in front of funky world.
+                            </p>
+                            <h1>
+                                $420
+                            </h1>
+                            <button class="btn btn-warning">
+                                Buy Now
+                            </button>
+                          </div>
+                          <div class="col-lg-5">
+                            <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
                   </div>
+                    <!-- slider 1 end -->
+
+                    <!-- slider 2 -->
                   <div class="carousel-item">
-                    <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                    <div class="row d-flex align-items-center p-5 bg-info">
+                        <div class="col-lg-7 ">
+                          <h1>
+                              Cool Dude Headphone
+                          </h1>
+                          <p>
+                              This is the best headphone in the world for people who just want to waste time in front of funky world.
+                          </p>
+                          <h1>
+                              $420
+                          </h1>
+                          <button class="btn btn-warning">
+                              Buy Now
+                          </button>
+                        </div>
+                        <div class="col-lg-5">
+                          <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
                   </div>
+                    <!-- slider 2 end -->
+
+                    <!-- slider 3 -->
                   <div class="carousel-item">
-                    <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                    <div class="row d-flex align-items-center p-5 bg-info">
+                        <div class="col-lg-7 ">
+                          <h1>
+                              Cool Dude Headphone
+                          </h1>
+                          <p>
+                              This is the best headphone in the world for people who just want to waste time in front of funky world.
+                          </p>
+                          <h1>
+                              $420
+                          </h1>
+                          <button class="btn btn-warning">
+                              Buy Now
+                          </button>
+                        </div>
+                        <div class="col-lg-5">
+                          <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
                   </div>
+                    <!-- slider 3 end -->
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -66,7 +128,36 @@
         <!-- slider -->
     </header>
     <main>
-
+        <!-- categories -->
+        <section class="container my-5">
+            <div class="row g-2">
+                <div class="col-lg-4">
+                  <div class="p-3 border bg-warning text-white d-flex justify-content-between align-items-center rounded-3">
+                      <h1>
+                          Watch
+                      </h1>
+                      <img src="images/categories/watch.png" alt="">
+                  </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="p-3 border bg-info text-white d-flex justify-content-between align-items-center rounded-3">
+                        <h1>
+                            Bag
+                        </h1>
+                        <img src="images/categories/bag.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="p-3 border bg-success text-white d-flex justify-content-between align-items-center rounded-3">
+                        <h1>
+                            Shoes
+                        </h1>
+                        <img src="images/categories/shoes.png" alt="">
+                    </div>
+                </div>
+              </div>
+        </section>
+        <!-- categories end -->
     </main>
     <footer>
 
