--- a/index.html
+++ b/index.html
@@ -4,34 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This is </title>
+    <title>Panda E-Commerce</title>
     
     <!-- bootstrap integration -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- bootstrap integration -->
 
+    <!-- custom css -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- custom css -->
+
 </head>
 <body>
     <header>
         <!-- navbar -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar mb-5 navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="images/logo.png" alt="" class="d-inline-block align-text-top">
-                  </a>
+                </a>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" href="#shoes">Shoes</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link" href="#">Backpack</a>
+                    <a class="nav-link" href="#backpacks">Backpack</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Subscribe</a>
+                    <a class="nav-link" href="#subscribe">Subscribe</a>
                   </li>
                 </ul>
               </div>
@@ -45,7 +49,7 @@
                 <div class="carousel-inner">
                     <!-- slider 1 -->
                   <div class="carousel-item active">
-                    <div class="row d-flex align-items-center p-5 bg-info">
+                    <div class="row d-flex align-items-center p-5 panda-bg">
                           <div class="col-lg-7 ">
                             <h1>
                                 Cool Dude Headphone
@@ -56,7 +60,7 @@
                             <h1>
                                 $420
                             </h1>
-                            <button class="btn btn-warning">
+                            <button class="panda-buy-now-btn">
                                 Buy Now
                             </button>
                           </div>
@@ -69,7 +73,7 @@
 
                     <!-- slider 2 -->
                   <div class="carousel-item">
-                    <div class="row d-flex align-items-center p-5 bg-info">
+                    <div class="row d-flex align-items-center p-5 panda-bg">
                         <div class="col-lg-7 ">
                           <h1>
                               Cool Dude Headphone
@@ -80,7 +84,7 @@
                           <h1>
                               $420
                           </h1>
-                          <button class="btn btn-warning">
+                          <button class="panda-buy-now-btn">
                               Buy Now
                           </button>
                         </div>
@@ -93,7 +97,7 @@
 
                     <!-- slider 3 -->
                   <div class="carousel-item">
-                    <div class="row d-flex align-items-center p-5 bg-info">
+                    <div class="row d-flex align-items-center p-5 panda-bg">
                         <div class="col-lg-7 ">
                           <h1>
                               Cool Dude Headphone
@@ -104,7 +108,7 @@
                           <h1>
                               $420
                           </h1>
-                          <button class="btn btn-warning">
+                          <button class="panda-buy-now-btn">
                               Buy Now
                           </button>
                         </div>
@@ -129,10 +133,10 @@
     </header>
     <main>
         <!-- categories -->
-        <section class="container my-5">
+        <section class="container my-5 categories">
             <div class="row g-2">
                 <div class="col-lg-4">
-                  <div class="p-3 border bg-warning text-white d-flex justify-content-between align-items-center rounded-3">
+                  <div class="p-3 border panda-orange text-white d-flex justify-content-between align-items-center rounded-3">
                       <h1>
                           Watch
                       </h1>
@@ -140,7 +144,7 @@
                   </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="p-3 border bg-info text-white d-flex justify-content-between align-items-center rounded-3">
+                    <div class="p-3 border panda-purple text-white d-flex justify-content-between align-items-center rounded-3">
                         <h1>
                             Bag
                         </h1>
@@ -148,7 +152,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="p-3 border bg-success text-white d-flex justify-content-between align-items-center rounded-3">
+                    <div class="p-3 border panda-blue text-white d-flex justify-content-between align-items-center rounded-3">
                         <h1>
                             Shoes
                         </h1>
@@ -158,9 +162,136 @@
               </div>
         </section>
         <!-- categories end -->
-    </main>
-    <footer>
 
+        <!-- product cards -->
+        <section class="container" id="shoes">
+          <h2>
+            Shoes
+          </h2>
+          <div class="row row-cols-1 row-cols-md-3 row-cols-lg-3 g-4">
+            <div class="col">
+              <div class="card shadow-lg border-0 h-100">
+                <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Supply 350</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="m-3">
+                  <button class="panda-buy-now-btn">
+                    Buy Now
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card shadow-lg border-0  h-100">
+                <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Nike 360</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="m-3">
+                  <button class="panda-buy-now-btn">
+                    Buy Now
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card shadow-lg border-0  h-100">
+                <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Red Airmax</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                <div class="m-3">
+                  <button class="panda-buy-now-btn">
+                    Buy Now
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- product cards end -->
+
+        <!-- product cards -->
+        <section class="container mt-5" id="backpacks">
+          <h2>
+            Backpacs
+          </h2>
+          <div class="row row-cols-1 row-cols-md-3 row-cols-lg-3 g-4">
+            <div class="col">
+              <div class="card shadow-lg border-0 h-100">
+                <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Red Laltu Bag</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="m-3">
+                  <button class="panda-buy-now-btn">
+                    Buy Now
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card shadow-lg border-0  h-100">
+                <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Blue Niltu Bag</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="m-3">
+                  <button class="panda-buy-now-btn">
+                    Buy Now
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card shadow-lg border-0  h-100">
+                <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Black Kaltu Bag</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                <div class="m-3">
+                  <button class="panda-buy-now-btn">
+                    Buy Now
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- product cards end -->
+
+        <!-- subscribe section -->
+        <section style="height: 400px;" class="container mt-5 panda-bg d-flex justify-content-center align-items-center rounded-3" id="subscribe">
+          <div>
+            <h2>
+              LET'S STAY IN TOUCH
+            </h2>
+            <p class="">
+              Get updates on sales, specials and more
+            </p>
+            <input class="form-control" type="text" placeholder="Your Email">
+            <br>
+            <button class="panda-buy-now-btn">
+              Submit
+            </button>
+          </div>
+        </section>
+        <!-- subscribe section end -->
+
+
+        
+    </main>
+    <footer class="mt-5 text-center">
+      <p class="small">
+        ©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.
+      </p>
     </footer>
 
     <!-- bootstrap Javascript -->
